--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,29 @@ python:
   - "3.6"
 services:
   - postgresql
-  - xvfb
+  - docker
 env:
-  - MOZ_HEADLESS=1
+  - SOLR_URL=http://localhost:8983
 addons:
   firefox: latest
+before_install:
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/docker_pull_keycloak.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/start_keycloak_as_daemon.sh
+  - sleep 33
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/docker_pull_solr.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/start_solr_as_daemon.sh
+  - sleep 15
 install:
   - pip install -r solr-admin-app/requirements/dev.txt
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 
   - psql -c 'create database namex;' -U postgres
-  - export SOLR_ADMIN_APP_DATABASE_NAME=namex
-  - export SOLR_ADMIN_APP_DATABASE_USERNAME=postgres
+  - psql -c 'create database synonyms;' -U postgres
+  - export NAMES_ADMIN_DATABASE_NAME=namex
+  - export NAMES_ADMIN_DATABASE_USERNAME=postgres
+  - export NAMES_ADMIN_SYNONYMS_DATABASE_NAME=synonyms
+  - export NAMES_ADMIN_SYNONYMS_DATABASE_USERNAME=postgres
+  - echo $TRAVIS_BUILD_DIR
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/create_test_user.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/create_possible_conflicts_core.sh
 script:
   - pytest solr-admin-app/tests
