--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,14 @@ python:
 services:
   - postgresql
   - docker
-env:
-  - SOLR_URL=http://localhost:8983
 addons:
   firefox: latest
 before_install:
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/docker_pull_keycloak.sh
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/start_keycloak_as_daemon.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/keycloak/docker_pull_keycloak.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/keycloak/start_keycloak_as_daemon.sh
   - sleep 33
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/docker_pull_solr.sh
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/start_solr_as_daemon.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/solr/docker_pull_solr.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/solr/start_solr_as_daemon.sh
   - sleep 15
 install:
   - pip install -r solr-admin-app/requirements/dev.txt
@@ -25,7 +23,11 @@ before_script:
   - export NAMES_ADMIN_SYNONYMS_DATABASE_NAME=synonyms
   - export NAMES_ADMIN_SYNONYMS_DATABASE_USERNAME=postgres
   - echo $TRAVIS_BUILD_DIR
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/keycloak/create_test_user.sh
-  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/solr/create_possible_conflicts_core.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/keycloak/create_test_user.sh
+  - $TRAVIS_BUILD_DIR/solr-admin-app/tests/support/solr/create_possible_conflicts_core.sh
+  - export SOLR_ADMIN_APP_OIDC_CLIENT_SECRETS=solr-admin-app/keycloak_client_secrets/secrets.json
+  - export SOLR_ADMIN_APP_OIDC_VALID_ISSUERS=http://localhost:8081/auth/realms/master
+  - export SOLR_ADMIN_APP_OIDC_ID_TOKEN_COOKIE_SECURE=False
+  - export SOLR_URL=http://localhost:8983
 script:
   - pytest solr-admin-app/tests
